FIX TEXT UPDATE ISSUE WITH HIGHLIGHT TEXT WITHOUT SPACING

--- a/src/themes/themes.css
+++ b/src/themes/themes.css
@@ -3,7 +3,7 @@
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   --margin: 8px;
   --padding: 8px;
-  --color-primary: #0f0;
-  --color-primary-light: rgba(0, 255, 0, 0.5);
+  --color-primary: #00E100;
+  --color-primary-light: rgba(0, 225, 0, .5);
   --color-secondary: #000;
 }
